service.user/deploy/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-server
  namespace: certify-d-dev
  labels:
    app: user-server
spec:
  selector:
    matchLabels:
      app: user-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: user-server
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      containers:
        - name: user-server
          image: europe-west1-docker.pkg.dev/darrensemusemu-infra/certify-d/user-server
          resources:
            requests:
              cpu: 64m
              memory: 100Mi
            limits:
              cpu: 128m
              memory: 200Mi
              # TODO:
          # livenessProbe: 
          #   tcpSocket:
          #     port: 80
          #   initialDelaySeconds: 5
          #   timeoutSeconds: 5
          #   successThreshold: 1
          #   failureThreshold: 3
          #   periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/alive
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 8080
              name: http
          # volumeMounts:
          #   - name: localtime
          #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
