service.user/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-restapi
  namespace: certify-d-dev
spec:
  selector:
    app: user-restapi
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
