service.user/deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-server
  namespace: certify-d-dev
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oathkeeper-api.certify-d-dev.svc.cluster.local:4456/decisions$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/user/$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - certify-d.darrensemusemu.dev
      secretName: letsencrypt-prod-cluster
  rules:
    - host: certify-d.darrensemusemu.dev
      http:
        paths:
          - path: /api/v1/user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: oathkeeper-api
                port:
                  name: http
    - host: localhost
      http:
        paths:
          - path: /api/v1/user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-server
                port:
                  name: http
